--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,8 @@ avatar: "/img/avatar-icon.png"
 # List of links in the navigation bar
 navbar-links:
   Home: ""
-  About Me: "aboutme"
-  Contact: "contact"
+  #About Me: "aboutme"
+  #Contact: "contact"
   
 # --- Footer options --- #
 
